# cpp-exercices

./: README.md
container/: README.md
container/exercice_1/: README.md  main.cpp
pentamino/: CMakeLists.txt  Jamroot  README.md
pentamino/src/core/: error.hpp
pentamino/src/cxx/: compiler_version.hpp  cxx.hpp  diagnostic.hpp
pentamino/src/main/: draw.cpp  pentaminoMain.cpp
pentamino/src/utils/: bitfu.hpp  colors.hpp  drawable.hpp  ellipse.hpp  image_data_view.hpp  png.cpp  png.hpp  ppm.cpp  ppm.hpp  rect.hpp
pentamino/src/utils/sugar/: array.hpp  array_view.hpp  std_stream_proto.hpp
pentamino/src/utils/sugar/numerics/: safe_conversions.hpp
thread_introduction/: README.md  main.cpp  output_good.txt
